<resources>
    <string name="app_name">CRUD Volley</string>
    <string name="text_insert">Tambahkan</string>
    <string name="text_delete">Hapus</string>
    <string name="text_username">Username</string>
    <string name="text_nama">Nama</string>
    <string name="text_password">Password</string>
    <string name="text_grup">Grup</string>
    <string name="text_batal">Batal</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_id_user">ID User</string>
</resources>