<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp">

    <EditText
        android:id="@+id/inp_id"
        android:inputType="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_id_user" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilusername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp">

    <EditText
        android:id="@+id/inp_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_username" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilnama"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp">

    <EditText
        android:id="@+id/inp_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_nama" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilpassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp">

    <EditText
        android:id="@+id/inp_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebPassword"
        android:hint="@string/text_password" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tilgrup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4dp">

    <EditText
        android:id="@+id/inp_grup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_grup" />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:orientation="horizontal"
      >

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/text_batal" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/text_simpan" />
  </LinearLayout>

  <Button
      android:id="@+id/btn_delete"
      android:layout_width="match_parent"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:text="@string/text_delete" />
</LinearLayout>