<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nama"
                android:textSize="22sp"
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/nama"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_username"
                android:layout_below="@id/nama"
                android:id="@+id/username"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:layout_below="@id/username"
                android:id="@+id/password"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_grup"
                android:layout_below="@id/password"
                android:id="@+id/grup"/>
        </RelativeLayout>
</androidx.cardview.widget.CardView>